2005-11-27  Mark D. Baushke  <mdb@gnu.org>

	* getaddrinfo.h, getcwd.c, md5.c, md5.h: Update from GNULIB.

2005-11-14  Mark D. Baushke  <mdb@gnu.org>

	* system.h (FOLD_FN_CHAR): Distinguish OSX_ and VMS_ variations
	based on USE_VMS_FILENAME macro.

2005-11-09  Mark D. Baushke  <mdb@gnu.org>

	* system.h (FOLD_FN_CHAR): Create a VMS alternative of this macro
	(patch suggested by Piet Schuermans <pschuermans@mac.com>).
	
2005-10-20  Derek Price  <derek@ximbiot.com>

	 * md5.c, md5.h, strcasecmp.c, strncasecmp.c: Update from GNULIB.

2005-10-05  Derek Price  <derek@ximbiot.com>

	* getaddrinfo.h, getdelim.c, md5.h: Update from GNULIB.

2005-10-04  Derek Price  <derek@ximbiot.com>

	* getaddrinfo.h, getdelim.c: Update from GNULIB.

	* sunos57-select.c, system.h: Assume <unistd.h>.

2005-10-03  Derek Price  <derek@ximbiot.com>

	* Makefile.am (libcvs_a_SOURCES): Remove xreadlink.  Add mbchar.
	* Makefile.gnulib: Regenerated.
	* creat-safer.c, fcntl--.h, fcntl-safer.h, open-safer.c, openat-die.c:
	New files from GNULIB.
	* canonicalize.c, dup2.c, ftruncate.c, getaddrinfo.c, getaddrinfo.h,
	getcwd.c, getcwd.h, getdate.c, getdate.y, getdelim.c, getopt_.h,
	getpagesize.h, nanosleep.c, openat.c, openat.h, pathmax.h, quotearg.c,
	regex_internal.h, save-cwd.c, strftime.c, tempname.c, xgethostname.c,
	xreadlink.c: Update from GNULIB.

2005-09-29  Derek Price  <derek@ximbiot.com>

	* system.h: #define fd_select select when not already defined.

2005-09-25  Conrad T. Pino  <Conrad@Pino.com>

	* libcvs.dsp: Add files (mkstemp.c tempname.c) to project.

	* libcvs.dep, libcvs.mak: Regenerated for "libcvs.dsp" changes.

2005-09-21  Conrad T. Pino  <Conrad@Pino.com>

	* libcvs.dep: Regenerated for "../windows-NT/fix-msvc-mak.pl" change
	to remove "basetsd" references.

2005-09-20  Conrad T. Pino  <Conrad@Pino.com>

	* libcvs.dsp: Add files (canon-host.c gai_strerror.c getaddrinfo.c
	getdelim.c mbchar.c strnlen1.c canon-host.h getaddrinfo.h getdelim.h